--- a/themes/dinnerdelights/source/manifest.json
+++ b/themes/dinnerdelights/source/manifest.json
@@ -1,17 +1,18 @@
 {
-	"name": "Dinner Delights",
-	"icons": [
-		{
-			"src": "\/android-chrome-192x192.png",
-			"sizes": "192x192",
-			"type": "image\/png"
-		},
-		{
-			"src": "\/android-chrome-512x512.png",
-			"sizes": "512x512",
-			"type": "image\/png"
-		}
-	],
-	"theme_color": "#28fff7",
-	"display": "standalone"
+    "name": "My Dinner Delights",
+    "icons": [
+        {
+            "src": "/android-chrome-192x192.png?v=BGAMBYvEME",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/android-chrome-512x512.png?v=BGAMBYvEME",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "theme_color": "#ffffff",
+    "background_color": "#ffffff",
+    "display": "standalone"
 }
