--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: My Dinner Delights
+title: Dinner Delights
 subtitle: A personal chef for you in central Iowa
 description:
 author: Andrea Love
