--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "version": "3.7.1"
   },
   "dependencies": {
-    "hexo": "^3.7.1",
+    "@angular/cli": "^7.0.4",
+    "eslint": "^5.8.0",
+    "firebase-tools": "^6.0.1",
+    "hexo": "^3.8.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
@@ -17,6 +20,7 @@
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
     "hexo-tag-bootstrap": "0.1.2",
-    "hexo-tag-fontawesome": "^1.0.0"
+    "hexo-tag-fontawesome": "^1.0.0",
+    "ionic": "^4.3.0"
   }
 }
