--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "mydinnerdelights",
+  "version": "1.0.0",
   "private": true,
   "hexo": {
     "version": "3.8.0"
   },
   "dependencies": {
-    "@angular/cli": "^7.0.4",
-    "eslint": "^5.8.0",
-    "firebase-tools": "^6.0.1",
     "hexo": "^3.8.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
@@ -20,7 +17,6 @@
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
     "hexo-tag-bootstrap": "0.1.2",
-    "hexo-tag-fontawesome": "^1.0.0",
-    "ionic": "^4.3.0"
+    "hexo-tag-fontawesome": "^1.0.0"
   }
 }
