--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
-- BingSiteAuth.xml
+  - BingSiteAuth.xml
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -73,3 +73,6 @@ deploy:
 
 sitemap:
   path: sitemap.xml
+
+gifts_in_a_jar: false #http://buytickets.at/dinnerdelights/314337
+holiday_sides: false #http://buytickets.at/dinnerdelights/314335
