--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cloudinary-vue": "^1.0.0",
     "cross-env": "^5.2.0",
+    "moment": "^2.24.0",
     "nuxt": "^2.0.0",
     "storyblok-nuxt": "1.0.0"
   },
