--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "cross-env": "^5.2.0",
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
-    "storyblok-nuxt": "1.0.0",
-    "vue-instagram": "^3.0.0"
+    "storyblok-nuxt": "1.0.0"
   },
   "devDependencies": {
     "css-loader": "^3.4.2",
