--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mydinnerdelights",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "build": "hexo generate"
+  },
   "hexo": {
     "version": "4.2.0"
   },
