--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@nuxtjs/google-analytics": "^2.2.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "css-loader": "^3.4.2",
-    "node-sass": "^4.13.1",
     "nodemon": "^1.11.0",
+    "sass": "^1.61.0",
     "sass-loader": "^8.0.2"
   }
 }
