--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
+    "@nuxt/scripts": "^0.11.13",
     "@storyblok/nuxt": "^6.2.3",
+    "@unhead/vue": "^2.0.14",
     "@vueuse/core": "^13.0.0",
     "nuxt": "^4.1.2",
     "vue": "latest"
